--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-rc.3",
     "antd": "2.2.1",
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
@@ -53,15 +54,19 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "http-proxy-middleware": "0.17.2",
+    "install": "^0.8.2",
     "isparta": "4.0.0",
     "jquery": "3.1.1",
+    "key-mirror": "^1.0.1",
     "less": "2.7.1",
     "less-loader": "2.2.3",
     "mobx": "2.6.1",
     "mobx-react": "3.5.8",
     "mocha": "3.1.2",
+    "npm": "^4.0.2",
     "npm-run-all": "3.1.1",
     "prompt": "1.0.0",
+    "ramda": "^0.22.1",
     "react": "15.3.2",
     "react-addons-test-utils": "15.3.2",
     "react-dom": "15.3.2",
@@ -69,9 +74,11 @@
     "redux-immutable-state-invariant": "1.2.4",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
+    "route-parser": "^0.0.5",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
     "style-loader": "0.13.1",
+    "url-parse": "^1.1.7",
     "webpack": "1.13.3",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.1"
